syntax = "proto3";

package ping;

message PingRequest {
    string message = 1;
}

message PongResponse {
    string message = 1;
}